--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
         "vite": "^4.0.0"
     },
     "dependencies": {
-        "bootstrap-icons": "^1.11.1"
+        "bootstrap-icons": "^1.11.1",
+        "date-fns": "^2.30.0",
+        "date-fns-tz": "^2.0.0"
     }
 }
